--- a/verbi-italiani.html
+++ b/verbi-italiani.html
@@ -42,11 +42,11 @@
                         <tr>
                             <th rowspan="8">Modi Finiti</th>
                             <th rowspan="4">Indicativo</th>
-                            <td>Presente Indicativo</td>
+                            <td>Indicativo Presente</td>
                             <td>Passato Prossimo</td>
                         </tr>
                         <tr>
-                            <td>Imperfetto Indicativo</td>
+                            <td>Indicativo Imperfetto</td>
                             <td>Trapassato Prossimo</td>
                         </tr>
                         <tr>
@@ -252,14 +252,172 @@
                         </tr>
                     </tbody>
                 </table>
+                <table>
+                    <caption>Coniugazione del passato remoto</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>io</th>
+                            <th>tu</th>
+                            <th>lui/lei</th>
+                            <th>noi</th>
+                            <th>voi</th>
+                            <th>loro</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>parlare</th>
+                            <td>parl<b>ai</b></td>
+                            <td>parl<b>asti</b></td>
+                            <td>parl<b>ò</b></td>
+                            <td>parl<b>ammo</b></td>
+                            <td>parl<b>aste</b></td>
+                            <td>parl<b>arono</b></td>
+                        </tr>
+                        <tr>
+                            <th>ricevere</th>
+                            <td>ricev<b>ei</b></td>
+                            <td>ricev<b>esti</b></td>
+                            <td>ricev<b>é</b></td>
+                            <td>ricev<b>emmo</b></td>
+                            <td>ricev<b>este</b></td>
+                            <td>ricev<b>erono</b></td>
+                        </tr>
+                        <tr>
+                            <th>dormire</th>
+                            <td>dorm<b>ii</b></td>
+                            <td>dorm<b>isti</b></td>
+                            <td>dorm<b>ì</b></td>
+                            <td>dorm<b>immo</b></td>
+                            <td>dorm<b>iste</b></td>
+                            <td>dorm<b>irono</b></td>
+                        </tr>
+                        <tr>
+                            <th>finire</th>
+                            <td>fin<b>ii</b></td>
+                            <td>fin<b>isti</b></td>
+                            <td>fin<b>ì</b></td>
+                            <td>fin<b>immo</b></td>
+                            <td>fin<b>iste</b></td>
+                            <td>fin<b>irono</b></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <caption>Coniugazione del futuro semplice</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>io</th>
+                            <th>tu</th>
+                            <th>lui/lei</th>
+                            <th>noi</th>
+                            <th>voi</th>
+                            <th>loro</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>parlare</th>
+                            <td>parl<b>erò</b></td>
+                            <td>parl<b>erai</b></td>
+                            <td>parl<b>erà</b></td>
+                            <td>parl<b>eremo</b></td>
+                            <td>parl<b>erete</b></td>
+                            <td>parl<b>eranno</b></td>
+                        </tr>
+                        <tr>
+                            <th>ricevere</th>
+                            <td>ricev<b>erò</b></td>
+                            <td>ricev<b>erai</b></td>
+                            <td>ricev<b>erà</b></td>
+                            <td>ricev<b>eremo</b></td>
+                            <td>ricev<b>erete</b></td>
+                            <td>ricev<b>eranno</b></td>
+                        </tr>
+                        <tr>
+                            <th>dormire</th>
+                            <td>dorm<b>irò</b></td>
+                            <td>dorm<b>irai</b></td>
+                            <td>dorm<b>irà</b></td>
+                            <td>dorm<b>iremo</b></td>
+                            <td>dorm<b>irete</b></td>
+                            <td>dorm<b>iranno</b></td>
+                        </tr>
+                        <tr>
+                            <th>finire</th>
+                            <td>fin<b>irò</b></td>
+                            <td>fin<b>irai</b></td>
+                            <td>fin<b>irà</b></td>
+                            <td>fin<b>iremo</b></td>
+                            <td>fin<b>irete</b></td>
+                            <td>fin<b>iranno</b></td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
             <section>
                 <h1>Congiuntivo <span lang="zh-Hans">虚拟语气</span></h1>
                 <p lang="zh-Hans">表示主观、非现实、不确信、不可能或假设的事件。与
                     <span lang="it">Indicativo</span>
-                    的主要区别在于所叙述的事件一般并未在现实中发生。
+                    的主要区别在于所叙述的事件一般并未在现实中发生。经常用在
+                    <i lang="it">che</i> 引导的从句中。
                 </p>
                 <p>È possibile che <strong>sia</strong> così.</p>
+                <p lang="zh-Hans">表示意见或想法的动词后的从句中需要使用虚拟语气。</p>
+                <p><strong>Penso</strong> che tutti <strong>siano</strong> ancora là.</p>
+                <p><strong>Credo</strong> che <strong>sia</strong> molto contento di essere stato promosso.</p>
+                <table>
+                    <caption>Coniugazione dei verbi irregolari (presente/imperfetto)</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>io</th>
+                            <th>tu</th>
+                            <th>lui/lei</th>
+                            <th>noi</th>
+                            <th>voi</th>
+                            <th>loro</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th rowspan="2">essere</th>
+                            <td>sia</td>
+                            <td>sia</td>
+                            <td>sia</td>
+                            <td>siamo</td>
+                            <td>siate</td>
+                            <td>siano</td>
+                        </tr>
+                        <tr>
+                            <td>fossi</td>
+                            <td>fossi</td>
+                            <td>fosse</td>
+                            <td>fossimo</td>
+                            <td>foste</td>
+                            <td>fossero</td>
+                        </tr>
+                        <tr>
+                            <th rowspan="2">avere</th>
+                            <td>abbia</td>
+                            <td>abbia</td>
+                            <td>abbia</td>
+                            <td>abbiamo</td>
+                            <td>abbiate</td>
+                            <td>abbiano</td>
+                        </tr>
+                        <tr>
+                            <td>avessi</td>
+                            <td>avessi</td>
+                            <td>avesse</td>
+                            <td>avessimo</td>
+                            <td>aveste</td>
+                            <td>avessero</td>
+                        </tr>
+                    </tbody>
+                </table>
                 <table>
                     <caption>Coniugazione del congiuntivo presente</caption>
                     <thead>
@@ -370,6 +528,58 @@
                 <p>Con un milione <strong>comprerei</strong> una casa.</p>
                 <p>Al tuo posto, <strong>farei</strong> diversamente.</p>
                 <p><strong>Vorrei</strong> provare i pantaloni rossi in vetrina.</p>
+                <table>
+                    <caption>Coniugazione del congiuntivo imperfetto</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>io</th>
+                            <th>tu</th>
+                            <th>lui / lei</th>
+                            <th>noi</th>
+                            <th>voi</th>
+                            <th>loro</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>parlare</th>
+                            <td>parl<b>erei</b></td>
+                            <td>parl<b>eresti</b></td>
+                            <td>parl<b>erebbe</b></td>
+                            <td>parl<b>eremmo</b></td>
+                            <td>parl<b>ereste</b></td>
+                            <td>parl<b>erebbero</b></td>
+                        </tr>
+                        <tr>
+                            <th>ricevere</th>
+                            <td>ricev<b>erei</b></td>
+                            <td>ricev<b>eresti</b></td>
+                            <td>ricev<b>erebbe</b></td>
+                            <td>ricev<b>eremmo</b></td>
+                            <td>ricev<b>ereste</b></td>
+                            <td>ricev<b>erebbero</b></td>
+                        </tr>
+                        <tr>
+                            <th>dormire</th>
+                            <td>dorm<b>irei</b></td>
+                            <td>dorm<b>iresti</b></td>
+                            <td>dorm<b>irebbe</b></td>
+                            <td>dorm<b>iremmo</b></td>
+                            <td>dorm<b>ireste</b></td>
+                            <td>dorm<b>irebbero</b></td>
+                        </tr>
+                        <tr>
+                            <th>finire</th>
+                            <td>fin<b>irei</b></td>
+                            <td>fin<b>iresti</b></td>
+                            <td>fin<b>irebbe</b></td>
+                            <td>fin<b>iremmo</b></td>
+                            <td>fin<b>ireste</b></td>
+                            <td>fin<b>irebbero</b></td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
             <section>
                 <h1>Imperativo <span lang="zh-Hans">命令语气</span></h1>
