--- a/verbi-italiani.html
+++ b/verbi-italiani.html
@@ -201,6 +201,58 @@
                     ，它表示“我也不知道是什么时候的事情，反正是曾经发生过的，并且早就完了”，这就是为什么该时态经常用于讲故事。该时态有时被称为“过去完成时”，但这是不合适的，之所以该时态隐含有完成的意味，是因为发生的时间久远，让人觉得已经完成了，是附带的，并非该时态本来的意义。
                 </p>
                 <table>
+                    <caption>Coniugazione del presente</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>io</th>
+                            <th>tu</th>
+                            <th>lui/lei</th>
+                            <th>noi</th>
+                            <th>voi</th>
+                            <th>loro</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>parlare</th>
+                            <td>parl<b>o</b></td>
+                            <td>parl<b>i</b></td>
+                            <td>parl<b>a</b></td>
+                            <td>parl<b>iamo</b></td>
+                            <td>parl<b>ate</b></td>
+                            <td>parl<b>ano</b></td>
+                        </tr>
+                        <tr>
+                            <th>prendere</th>
+                            <td>prend<b>o</b></td>
+                            <td>prend<b>i</b></td>
+                            <td>prend<b>e</b></td>
+                            <td>prend<b>iamo</b></td>
+                            <td>prend<b>ete</b></td>
+                            <td>prend<b>ono</b></td>
+                        </tr>
+                        <tr>
+                            <th>partire</th>
+                            <td>part<b>o</b></td>
+                            <td>part<b>i</b></td>
+                            <td>part<b>e</b></td>
+                            <td>part<b>iamo</b></td>
+                            <td>part<b>ite</b></td>
+                            <td>part<b>ono</b></td>
+                        </tr>
+                        <tr>
+                            <th>finire</th>
+                            <td>fini<b>sco</b></td>
+                            <td>fini<b>sci</b></td>
+                            <td>fini<b>sce</b></td>
+                            <td>fini<b>amo</b></td>
+                            <td>fini<b>te</b></td>
+                            <td>fini<b>scono</b></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
                     <caption>Coniugazione dell'imperfetto</caption>
                     <thead>
                         <tr>
@@ -368,6 +420,34 @@
                 <p lang="zh-Hans">表示意见或想法的动词后的从句中需要使用虚拟语气。</p>
                 <p><strong>Penso</strong> che tutti <strong>siano</strong> ancora là.</p>
                 <p><strong>Credo</strong> che <strong>sia</strong> molto contento di essere stato promosso.</p>
+                <p lang="zh-Hans">在表示主观评价的句子中，从句中使用虚拟语气。
+                    <i lang="it">bisognare, bastare, occorrere, valere la pena, piacere che</i>
+                    引导的从句中常使用虚拟语气。
+                </p>
+                <p>È incredibile che non si <b>paghi</b> mai in tempo.</p>
+                <p>È difficile che si <b>paghi</b> subito tutto.</p>
+                <p>È uno scandalo che nessuno <b>paghi</b> subito.</p>
+                <p>È allucinante che, mentre noi vi difendiamo, voi vi <b>schieriate</b> contro di noi.</p>
+                <p>Mi dispiace che tu <b>parta</b> così presto.</p>
+                <p>Non devi essere un campione, mi basta che tu <b>riesca</b> ad arrivare in tempo.</p>
+                <p>以上句子的共同特点是，从句所描述的事件是否发生并不重要，可以是现实也可以只是空想的概念。这是因为这种主观评价并不会因事件是否真正发生而改变，比如“杀人是不对的”这句话，不论“杀人”这个事件是否真正发生都成立，所以事件的现实性是不重要的。
+                </p>
+                <p>表达意愿、期待、要求等也用虚拟语气。因为从句所描述的事件还没有实际发生，只是被期望发生的。</p>
+                <p>Chiediamo che tutti <b>partano</b> subito.</p>
+                <p>Vogliamo che tutti <b>partano</b> subito.</p>
+                <p>Ci aspettiamo che tutti <b>partano</b> subito.</p>
+                <p>Lascia che tutti <b>partano</b>.</p>
+                <p><mark>待考察</mark> 以下从句所描述的是事实，但仍然用虚拟语气。</p>
+                <p>Sono contento che, da giorni, tutto <b>vada</b> bene.</p>
+                <p>Trovo un peccato che tu <b>stia</b> mangiando tanto.</p>
+                <p>Capisco benissimo che <b>essi</b> vogliano andarsene.
+                    <span lang="zh-Hans">我很清楚他们想离开。（主观世界里的“他们”？）</span>
+                </p>
+                <p>Trovo assurdo che, mentre uno lo difende, egli gli si <b>schieri</b> contro.</p>
+                <p>注意：以下句子用 <span lang="it">indicativo</span> 。</p>
+                <p>Capisco solo ora che essi vogliono andarsene.
+                    <span lang="zh-Hans">我刚刚明白他们想离开。（客观 &rightarrow; 主观）</span>
+                </p>
                 <table>
                     <caption>Coniugazione dei verbi irregolari (presente/imperfetto)</caption>
                     <thead>
